--- a/package.json
+++ b/package.json
@@ -78,11 +78,16 @@
     "mqtt": "2.15.1",
     "multer": "1.3.0",
     "mustache": "2.3.0",
+    "node-red-contrib-azure-iot-hub": "^0.4.0",
+    "node-red-contrib-spreadsheet-in": "^0.2.0",
     "node-red-dashboard": "^2.8.2",
     "node-red-node-email": "0.1.*",
     "node-red-node-feedparser": "0.1.*",
+    "node-red-node-mysql": "0.0.17",
     "node-red-node-rbe": "0.2.*",
+    "node-red-node-sqlite": "^0.3.5",
     "node-red-node-twitter": "0.1.*",
+    "node-red-node-watson": "^0.7.3",
     "nopt": "4.0.1",
     "oauth2orize": "1.11.0",
     "on-headers": "1.0.1",
