--- a/package.json
+++ b/package.json
@@ -79,6 +79,7 @@
     "multer": "1.3.0",
     "mustache": "2.3.0",
     "node-red-contrib-azure-iot-hub": "^0.4.0",
+    "node-red-contrib-excel": "0.0.3",
     "node-red-contrib-spreadsheet-in": "^0.2.0",
     "node-red-dashboard": "^2.8.2",
     "node-red-node-email": "0.1.*",
