--- a/package.json
+++ b/package.json
@@ -132,7 +132,7 @@
     "mocha": "~3.4.2",
     "should": "^8.4.0",
     "sinon": "1.17.7",
-    "supertest": "3.0.0",
+    "supertest": "3.0.0"
   },
   "engines": {
     "node": "8.x"
