--- a/package.json
+++ b/package.json
@@ -51,7 +51,7 @@
     "i18next": "1.10.6",
     "is-utf8": "0.2.1",
     "istanbul": "0.4.5",
-    "js-yaml": "3.10.0",
+    "js-yaml": ">=3.13.1",
     "json-stringify-safe": "5.0.1",
     "jsonata": "1.5.0",
     "media-typer": "0.3.0",
@@ -93,7 +93,7 @@
   },
   "devDependencies": {
     "chromedriver": "^2.33.2",
-    "grunt": "~1.0.1",
+    "grunt": ">=1.3.0",
     "grunt-chmod": "~1.1.1",
     "grunt-cli": "~1.2.0",
     "grunt-concurrent": "~2.3.1",
